tooling/nargo_cli/tests/snapshots/execution_success/global_var_regression_simple/execute__tests__expanded.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: expanded_code
---
global EXPONENTIATE: [[Field; 2]; 2] = [[0x01, 0x01], [0x00, 0x00]];

fn main(x: Field, y: pub Field) {
    let mut acc: Field = 0_Field;
    for i in 0_u32..2_u32 {
        for j in 0_u32..2_u32 {
            acc = acc + EXPONENTIATE[i][j];
        }
    }
    assert(!acc.lt(x));
    assert(x != y);
    dummy_again(x, y);
}

fn dummy_again(x: Field, y: Field) {
    let mut acc: Field = 0_Field;
    for i in 0_u32..2_u32 {
        for j in 0_u32..2_u32 {
            acc = acc + EXPONENTIATE[i][j];
        }
    }
    assert(x != y);
    assert(!acc.lt(x));
}
